# synthetic-gravity-waves

./: .gitignore  CITATION.cff  LICENSE  README.md  setup.cfg
.github/workflows/: python-package-pip.yml
notebooks/: development-of-method.ipynb  usage.ipynb
synthetic_gravity_waves/: __init__.py  components.py  composite.py  point_sampling.py
tests/: test_all.py
