[metadata]
name = synthetic-gravity-waves
version = attr: synthetic_gravity_waves.__version__
author = Leif Denby
author_email = leif@denby.eu
description = Python package for generation of synthetic gravity waves
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leifdenby/synthetic-gravity-waves

[options]
packages=find:
install_requires =
    scipy
    numpy

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
  nbval
  nb-black
  matplotlib
lint =
  pre-commit
dev =
  %(test)s
  %(lint)s
  ipython

[flake8]
max-line-length = 88
extend-ignore = E203
select = C,E,F,W,B,B950
ignore = E203, E501, W503
per-file-ignores = __init__.py:F401

[isort]
profile=black
